# gifski

./: .gitignore  Cargo.toml  wasm-pack.sh
pkg/: index.html  index.js  worker.js
src/: encoderust.rs  error.rs  lib.rs  minipool.rs  thread.rs
