[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["multimedia::video", "command-line-utilities"]
description = "pngquant-based GIF maker for nice-looking animGIFs"
documentation = "https://docs.rs/gifski"
homepage = "https://gif.ski"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs", "/src/bin/*.rs"]
keywords = ["gif", "encoder", "converter", "maker", "gifquant"]
license = "AGPL-3.0-or-later"
name = "gifski"
readme = "README.md"
repository = "https://github.com/ImageOptim/gifski"
version = "1.10.2"
autobins = false
edition = "2021"
rust-version = "1.63"

[dependencies]
gif = { version = "0.12.0", default-features = false, features = ["std", "raii_no_panic"] }
gif-dispose = "4.0.0"
imagequant = { version = "4.1.0", default-features = false }
imgref = "1.9.4"
rgb = "0.8.36"
quick-error = "2.0.1"
crossbeam-channel = "0.5.6"
loop9 = "0.1.3"

# Dependencies for debug
[target.'cfg(debug_assertions)'.dependencies]
log = "0.4"
env_logger = "0.8"
# Replaces panic with console.error
console_error_panic_hook = "0.1.6"
# Replaces log::* with console.*
console_log = { version = "0.2.0", features = ["color"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[lib]
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.dev]
debug = 1
opt-level = 1

[profile.dev.package.'*']
opt-level = 2
debug = false

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 's'     # Optimize for size
panic = 'abort'     # About unwinding code
strip = "debuginfo"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

